fix: bad active link contrast

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -102,14 +102,6 @@
 //
 //
 
-a:hover,
-a:focus {
-  color: hsl(163, 50%, 80%);
-}
-a:active {
-  color: hsl(163, 50%, 60%);
-}
-
 footer {
   position: sticky;
   bottom: 0;
